Updated Category Link on Home Page

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <h1 class="text-4xl font-bold">QuestionaryX</h1>
             <h2 class="text-xl text-gray-500">Trivia Questions</h2>
         </div>
-        <a href="/categories" class="text-blue-500 hover:underline">Category</a>
+        <a href="/src/categories.html" class="text-blue-500 hover:underline">Category</a>
     </div>
 
     <!-- Questions Section -->
