Added Category Page with API Called Categories

--- a/src/categories.html
+++ b/src/categories.html
@@ -19,19 +19,10 @@
     </div>
 
     <!-- Categories Section -->
-    <div class="grid grid-cols-3 gap-8">
-        <!-- Category Cards -->
-        <div class="bg-gray-200 p-4 rounded-lg">
-            <p class="mb-4">Category 1</p>
-            <button class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Select</button> 
-        </div>
-        <div class="bg-gray-200 p-4 rounded-lg">
-            <p class="mb-4">Category 2</p>
-            <button class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Select</button>
-        </div>
-            
+    <div class="grid grid-cols-3 gap-8" id="categories-container">
+        <!-- Category Cards will be inserted here dynamically -->
     </div>
 
-    <script src="./assets/js/main.js" type="module"></script>
+    <script src="../assets/js/main.js" type="module"></script>
 </body>
 </html>
