Updated Code Quality (Removed unnecessary code, changed comments etc...)

--- a/src/categories.html
+++ b/src/categories.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100 p-8">
 
-    <!-- Title and Subtitle -->
+    <!-- Title, Subtitle and Navlink to Home Page -->
     <div class="flex justify-between items-center mb-8">
         <div>
             <h1 class="text-4xl font-bold">Categories</h1>
@@ -20,7 +20,7 @@
 
     <!-- Categories Section -->
     <div class="grid grid-cols-3 gap-8" id="categories-container">
-        <!-- Category Cards will be inserted here dynamically -->
+        <!-- Categories get inserted here dynamically -->
     </div>
 
     <script src="../assets/js/main.js" type="module"></script>
