--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100 p-8">
 
-    <!-- Title and Subtitle -->
+    <!-- Title, Subtitle and Navlink to Home Page -->
     <div class="flex justify-between items-center mb-8">
         <div>
             <h1 class="text-4xl font-bold">QuestionaryX</h1>
@@ -20,11 +20,9 @@
 
     <!-- Questions Section -->
     <div class="grid grid-cols-3 gap-8" id="questions-container">
-        <!-- Questions will be inserted here dynamically -->
+        <!-- Questions get inserted here dynamically -->
     </div>
 
-    <!-- Script tag with the correct path to main.js -->
     <script src="../assets/js/main.js" type="module"></script>
-
 </body>
 </html>
