--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,16 @@
 </head>
 <body class="bg-gray-100 p-8">
 
-    <!-- Title, Subtitle and Navlink to Home Page -->
+    <!-- Title, Subtitle, Navlink to Home Page, and Random Question Link -->
     <div class="flex justify-between items-center mb-8">
         <div>
             <h1 class="text-4xl font-bold">QuestionaryX</h1>
             <h2 class="text-xl text-gray-500">Trivia Questions</h2>
         </div>
-        <a href="/src/categories.html" class="text-blue-500 hover:underline">Category</a>
+        <div>
+            <a href="/src/categories.html" class="text-blue-500 hover:underline mr-8">Category</a>
+            <a href="/src/question.html?id=${questionId}" class="text-blue-500 hover:underline">Random Question</a>
+        </div>
     </div>
 
     <!-- Questions Section -->
