--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="./output.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 p-8">
+<body class="bg-gray-100 p-4 sm:p-8">
 
     <!-- Title, Subtitle, Navlink to Home Page, and Random Question Link -->
-    <div class="flex justify-between items-center mb-8">
-        <div>
+    <div class="flex flex-col sm:flex-row justify-between items-center mb-8">
+        <div class="mb-4 sm:mb-0 text-center sm:text-left">
             <h1 class="text-4xl font-bold">QuestionaryX</h1>
             <h2 class="text-xl text-gray-500">Trivia Questions</h2>
         </div>
         <div>
-            <a href="/src/categories.html" class="text-blue-500 hover:underline mr-8">Category</a>
+            <a href="/src/categories.html" class="text-blue-500 hover:underline mr-4 sm:mr-8">Category</a>
             <a href="/src/question.html?id=${questionId}" class="text-blue-500 hover:underline">Random Question</a>
         </div>
     </div>
 
     <!-- Questions Section -->
-    <div class="grid grid-cols-3 gap-8" id="questions-container">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-8" id="questions-container">
         <!-- Questions will be inserted here dynamically -->
     </div>
 
