--- a/src/categories.html
+++ b/src/categories.html
@@ -8,14 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 p-4 sm:p-8">
-
-    <!-- Title, Subtitle and Navlink to Home Page -->
+    
+    <!-- Title, Subtitle, Navlink to Home Page, and Random Question Link -->
     <div class="flex flex-col sm:flex-row justify-between items-center mb-8">
         <div class="mb-4 sm:mb-0 text-center sm:text-left">
             <h1 class="text-4xl font-bold">Categories</h1>
             <h2 class="text-xl text-gray-500">Trivia Questions Categories</h2>
         </div>
-        <a href="/src/index.html" class="text-blue-500 hover:underline">Home</a>
+        <div>
+            <a href="/src/index.html" class="text-blue-500 hover:underline mr-4 sm:mr-8">Home</a>
+            <a href="/src/question.html?id=${questionId}" class="text-blue-500 hover:underline">Random Question</a>
+        </div>
     </div>
 
     <!-- Categories Section -->
